--- a/css/main.css
+++ b/css/main.css
@@ -638,18 +638,18 @@ body {
 }
 
 .card__picture--1 {
-  background-image: -webkit-gradient(linear, left top, right top, from(#ffb900), to(#ff7730)), url("../../img/involve1.jpg");
-  background-image: linear-gradient(to right, #ffb900, #ff7730), url("../../img/involve1.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(#ffb900), to(#ff7730)), url("../img/involve1.jpg");
+  background-image: linear-gradient(to right, #ffb900, #ff7730), url("../img/involve1.jpg");
 }
 
 .card__picture--2 {
-  background-image: -webkit-gradient(linear, left top, right top, from(#8e9efc), to(#1c3eff)), url("../../img/involve2.jpg");
-  background-image: linear-gradient(to right, #8e9efc, #1c3eff), url("../../img/involve2.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(#8e9efc), to(#1c3eff)), url("../img/involve2.jpg");
+  background-image: linear-gradient(to right, #8e9efc, #1c3eff), url("../img/involve2.jpg");
 }
 
 .card__picture--3 {
-  background-image: -webkit-gradient(linear, left top, right top, from(#55c57a), to(#28b485)), url("../../img/involve3.jpg");
-  background-image: linear-gradient(to right, #55c57a, #28b485), url("../../img/involve3.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(#55c57a), to(#28b485)), url("../img/involve3.jpg");
+  background-image: linear-gradient(to right, #55c57a, #28b485), url("../img/involve3.jpg");
 }
 
 .card__heading {
@@ -856,7 +856,7 @@ body {
 }
 
 .enroll {
-  background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../../img/background3.jpg");
+  background-image: radial-gradient(150% 200% ellipse at -15%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../img/background3.jpg");
   background-size: cover;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
