--- a/sass/Components/_enroll.scss
+++ b/sass/Components/_enroll.scss
@@ -16,7 +16,7 @@
     }
     background-image:
     radial-gradient(150% 200% ellipse at -15%, rgba($color-white, 0.8) 50%, transparent 50%),
-    url("../../img/background3.jpg");
+    url("../img/background3.jpg");
     background-size: cover;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
     border-radius: 5rem;
